# bwell-assistant

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  diagnostic_graph.py  main.py  pyproject.toml  requirements.txt
src/: App.tsx
src/components/Chat/: ChatContainer.tsx  ChatInput.tsx  LoadingIndicator.tsx  MessageBubble.tsx
src/services/: api.ts
src/types/: chat.ts
